--- a/H2AIndex/App.xaml
+++ b/H2AIndex/App.xaml
@@ -7,6 +7,7 @@
 
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Strings.xaml" />
                 <ResourceDictionary Source="/UI/Converters/Converters.xaml" />
                 <ResourceDictionary Source="/UI/Styles/Colors.xaml" />
                 <ResourceDictionary Source="/UI/Styles/Controls.xaml" />
