--- a/H2AIndex/Views/MainView.xaml
+++ b/H2AIndex/Views/MainView.xaml
@@ -33,6 +33,9 @@
                 <MenuItem Header="Preferences" Command="{Binding EditPreferencesCommand}" />
             </MenuItem>
             <MenuItem Header="Help">
+                <MenuItem Header="Tutorial Video"
+                          Command="{Binding ShowWebPageCommand}"
+                          CommandParameter="https://www.youtube.com/watch?v=hfji1ik2wFk" />
                 <MenuItem Header="GitHub"
                           Command="{Binding ShowWebPageCommand}"
                           CommandParameter="https://github.com/Wildenhaus/Index"/>
